--- a/pathama/10.sattami_vibhatti.md
+++ b/pathama/10.sattami_vibhatti.md
@@ -1,20 +1,20 @@
-## <center>**၌-ဟု ပေးရသော သတ္တာမီဝိဘတ်**</center>
+## <center>**၌-ဟု ပေးရသော သတ္တမီဝိဘတ်**</center>
 
-- **၁။** ဗုဒ္ဓေါ အနာထပိဏ္ဍိကဿ အာရာမေ ဝိဟရတိ။ 
-- **၂။** ပဏ္ဍိတာ ဗုဒ္ဓေ ပသီဒန္တိ။ 
-- **၃။** ဒါရကာ သယနေ သယန္တိ။ 
-- **၄။** ဗာလော ပါပသ္မိံ ရမတိ။
-- **၅။** အာကာသေ သကုနာ ပက္ခန္ဒန္တိ။ ၆။တိလေသု တေလံ တိဋ္ဌတိ။
-
+- **၁။** buddho anāthapiṇḍikassa ārāme viharati။ 
+- **၂။** paṇḍitā buddhe pasīdanti။ 
+- **၃။** dārakā sayane sayanti။ 
+- **၄။** bālo pāpasmiṃ ramati။
+- **၅။** ākāse sakunā pakkhandanti။ 
+- **၆။** tilesu telaṃ tiṭṭhati။
 ---
-- (**က**) သူငဘ်မသည် အိမ်၌ ထမင်း ချက်နေ၏။ 
-- (**ခ**) ငါတို့သည် လမ်း၌ မအိပ်ကြကုန်။ 
+- (**က**) သူငဘ်မသည် အိမ်၌ ထမင်း ချက်နေ၏။ 小女孩在家里煮饭。
+- (**ခ**) ငါတို့သည် လမ်း၌ မအိပ်ကြကုန်။ 我们不睡在路上。
 - (**ဂ**) လူမိုက်သည် ဘုရား၌ ကြည်ညိုသလော။
-- (**ဃ**) လူတို့သည် ကောင်းကင်၌ မပျံနိုင်ကုန်။ 
-- (**င**) အဘယ့်ကြောင့် သင်သည် အိပ်ရာ၌ အိပ်နေသနည်း။
+- (**ဃ**) လူတို့သည် ကောင်းကင်၌ မပျံနိုင်ကုန်။ 人们不能在天空飞。
+- (**င**) အဘယ့်ကြောင့် သင်သည် အိပ်ရာ၌ အိပ်နေသနည်း။为什么你会在床上睡觉。
 
 **<center>ကြည့်ရှုရန်</center>**
->ဝိဟရ-နေ(သီတင်းသုံး)။ ။အာရာမော-အာရာမ် (ကျောင်းတိုက်)။ ပသီဒ-ကြည်ညို (ကြည်လင်)။ ရမ-မွေ့လျက်(ပျော်)။ ပက္ခန္ဒ-ပျံ(ပြေးဝင်)။ ။အနာထပိဏ္ဍိကော-အနာထပိဏ်သူဌေး။ သယနံ-အိပ်ရာ။ ။အာကာသောကောင်းကင်။ ။သကုနော-ငှက်။ ။တိလံ-နှမ်း။ ။တေလံ-ဆီ။ ။တိဋ္ဌ-တည်။
+>vihara-နေ(သီတင်းသုံး)住။ ။ārāmo-အာရာမ် (ကျောင်းတိုက်)寺院။ pasīda-ကြည်ညို (ကြည်လင်)။ rama-မွေ့လျက်(ပျော်)开心။ pakkhanda-ပျံ飞(ပြေးဝင်跑)။ ။anāthapiṇḍiko-အနာထပိဏ်သူဌေး给孤独富翁။ sayanaṃ-အိပ်ရာ床။ ။ākāso-ကောင်းကင်။ 天空။sakuno-ငှက်鸟။ ။tilaṃ-နှမ်း芝麻။ ။telaṃ-ဆီ油။ ။tiṭṭha-တည်။
 
 
 **<center>အသုံးများသော ဝိဘတ်နက်များကို ပြရာ<br>ပထမအခန်း ပြီး၏။</center>**
