--- a/pathama/7.pancami_vibhatti.md
+++ b/pathama/7.pancami_vibhatti.md
@@ -1,61 +1,61 @@
 ## <center>မှာ-ဟု ပေးရသောပဉ္စမီဝိဘတ်</center>
->**[ဆောင်]** ဖဲခွာ-ထွက်သွား, ကျငြား-သက်ဆင်း, ကြောက်ခြင်း-ထိတ်လန့်, အတတ်သင်ယူ, ပြိုင်မူရှုံးလစ်, စ၍ဖြစ်ရာ,ရှောင်-ဝေးရာ, နီးစွာ ပဉ္စမီထား။
+>**[ဆောင်]** ဖဲခွာ避开-ထွက်သွား出去, ကျငြား掉-သက်ဆင်း上下, ကြောက်ခြင်း怕-ထိတ်လန့်惊恐, အတတ်သင်ယူ学习知识, ပြိုင်မူရှုံးလစ်比赛输, စ၍ဖြစ်ရာ开始有,ရှောင်回避-ဝေးရာ远离, နီးစွာ近 ပဉ္စမီထား။
 
 **<center>ကြည့်ရှုရန်</center>**
-- **ဖဲခွာ။**  ။ ဂါမာ အပေန္တိ = ရွာမှ ဖဲခွာကုန်၏ ။
-- **ထွက်သွား။**  ။ နဂရာ နိဂ္ဂတော = မြို့မှ ထွက်သွား၏ ။
-- **ကျငြား။**  ။ ရုက္ခာ ပထန္တိ = သစ်ပင်မှ ကျကုန်၏ ။
-- **သက်ဆင်း။**  ။ ပဗ္ဗတာ ဩရောဟန္တိ = တောင်မှ သက်ဆင်းကုန်၏ ။
-- **ကြောက်ခြင်း။**  ။ စောရာ ဘာယတိ = ခိုးသူမှ ကြောက်၏ ။
-- **ထတိလန့်။**  ။ပါပါ ဥတ္တသတိ = မကောင်မှုမှ ထိတ်လန့်၏ ။
-- **အတတ် သင်ယူ။**  ။ အာစရိယမှာ သိပ္ပံ ဥဂ္ဂဏှာတိ = ဆရာမှ (ဆရာ့အထံမှ) အတတ် သင်ယူ၏ ။
-- **ပြိုင်မူ ရှုံး။**  ။ ဗုဒ္ဓသ္မာ ပရာဇေန္တိ တိတ္ထိယာ = တိတ္ထိတို့သည် ဘုရားမှ ရှုံးကုန်၏ ။
-- **စ၍ ဖြစ်။** ။ ဟိမဝတာ ပဘဝန္တိ မဟာနဒိယော = မြစ်ကြီးတို့သည် ဟိမဝန္တာမှ စ၍ဖြစ်ကုန်၏ ။
-- **ရှောင်။**  ။ ပါဏာတိပါတာ ဝိရမာမိ = သူ့အသက် သတ်ခြင်းမှရှောင်ကြဉ်ပါ၏ ။
-- **ဝေးရာ။**  ။ဂါမာ ဒူရံ = ရွာမှဝေး၏။  ။အာရကာ သာသနာ = သာသနာတော်မှ ဝေး၏ ။
-- **နီးစွာ။**  ။ဂါမာ သန္တိ ကံ = ရွာမှ အနီးဖြစ်၏ ။ [ဤသို့ စသည်ဖြင့်ခွဲခွာခြင်းသဘော ပါရာ၌ မူလခွဲရာကို “အပါဒါန်” ဟုခေါ်၏ ၊ ထို အပါဒါနက်၌ ပဉ္စမီဝိဘတ် သက်ရသည်။]
+- **ဖဲခွာ။**  ။ gāmā apenti = ရွာမှ ဖဲခွာကုန်၏ ။避开村子
+- **ထွက်သွား။**  ။ nagarā niggato = မြို့မှ ထွက်သွား၏ ။离开城市。
+- **ကျငြား။**  ။ rukkhā patanti = သစ်ပင်မှ ကျကုန်၏ ။树上掉下来。
+- **သက်ဆင်း။**  ။ pabbatā orohanti = တောင်မှ သက်ဆင်းကုန်၏ ။上下山。
+- **ကြောက်ခြင်း။**  ။ corā bhāyati = ခိုးသူမှ ကြောက်၏ ။怕小偷。
+- **ထိတ်လန့်။**  ။pāpā uttasati = မကောင်မှုမှ ထိတ်လန့်၏ ။怕不善业
+- **အတတ် သင်ယူ။**  ။ ācariyamhā sippaṃ uggaṇhanti = ဆရာမှ (ဆရာ့အထံမှ) အတတ် သင်ယူ၏ ။在老师这学习知识。
+- **ပြိုင်မူ ရှုံး။**  ။ buddhasmā parājenti titthiyā = တိတ္ထိတို့သည် ဘုရားမှ ရှုံးကုန်၏ ။异教徒输给佛陀
+- **စ၍ ဖြစ်။** ။ himavatā pabhavanti mahānadiyo = မြစ်ကြီးတို့သည် ဟိမဝန္တာမှ စ၍ဖြစ်ကုန်၏ ။大地从原始森林开始的。
+- **ရှောင်။**  ။ pāṇātipātā viramāmi = သူ့အသက် သတ်ခြင်းမှရှောင်ကြဉ်ပါ၏ ။躲避杀生。
+- **ဝေးရာ။**  ။gāmā dūraṃ = ရွာမှဝေး၏။  ။ārakā sāsanā = သာသနာတော်မှ ဝေး၏ ။远离僧团。
+- **နီးစွာ။**  ။gāmā santi kaṃ = ရွာမှ အနီးဖြစ်၏ ။ 村里很近。[ဤသို့ စသည်ဖြင့်ခွဲခွာခြင်းသဘော ပါရာ၌ မူလခွဲရာကို “အပါဒါန်” ဟုခေါ်၏ ၊ ထို အပါဒါနက်၌ ပဉ္စမီဝိဘတ် သက်ရသည်။]
 
 ## <center>(က) အနက်ပေး, မြန်မာပြန်</center>
-- **၁။** သာမဏေရာ ကုတော အပေန္တိ။ 
-- **၂။** သာမဏေရာ ဂါမာ အပေန္တိ။ 
-- **၃။** ရာဇာ ကုတော နိဂ္ဂတော။ 
-- **၄။** ရာဇာ နဂရာ နိဂ္ဂတော။ 
-- **၅။** ဒါရကော ကုတော ပတတိ။ 
-- **၆။** ဒါရကော ရုက္ခာ ပတတိ။ 
-- **၇။** ပုရိသော ကုတော ဩရောဟတိ။ 
-- **၈။** ပုရိသော ကုတော ဩရောဟတိ။ 
-- **၉။** မနုဿာ ကေဟိ ဘာယန္တိ။ 
-- **၁၀။** မနုဿာ စောရေဟိ ဘာယန္တိ။
+- **၁။** sāmaṇerā kuto apenti။ 
+- **၂။** sāmaṇerā gāmā apenti။ 
+- **၃။** rājā kuto niggato။ 
+- **၄။** rājā nagarā niggato။ 
+- **၅။** dārako kuto patati။ 
+- **၆။** dārako rukkhā patati။ 
+- **၇။** puriso kuto orohati။ 
+- **၈။** puriso gehā orohati။ 
+- **၉။** manussā kehi bhāyanti။ 
+- **၁၀။** manussā corehi bhāyanti။
 
 **<center>ကြည့်ရှုရန်</center>**
->အပေးန္တိ- ဖဲကုန်၏။ ။နိဂ္ဂတော-ထွက်သွား၏။ ။ပတ-ကျ။ ။ဩရောဟ-သက်(ဆင်း)။ ။ကုတော-အဘယ်မှ။ ။ဘာယ-ကြောက်။ ။ဂေဟံ-အိမ်။ ။စောရော-သူခိုး။ ။ရုက္ခော-သစ်ပင်။
+>apenti- ဖဲကုန်၏။避开 ။niggato-ထွက်သွား၏出去။ ။pataပတ-ကျ掉။ ။oroha-သက်(ဆင်း)上下။ ။kuto-အဘယ်မှ哪။ ။bhāya-ကြောက်怕။ ။gehaṃ-အိမ်家။ ။စcoro-သူခိုး小偷။ ။rukkho-သစ်ပင်树။
 
 ## <center>(ခ) အနက်ပေး,မြန်မာပြန်</center>
-- **၁။** ကညာယော ကေတိ ဥတ္တသန္တိ။  ။ ကညာယော ဗာလေဟိ ကတ္တသန္တိ။
-- **၂။** သိဿာ ကုတော သိပ္ပံ ဥဂ္ဂဏန္တိ။  ။ သိဿာ အာစရိယတော သိပ္ပံ ဥဂ္ဂဏှန္တိ။
-- **၃။** သာမာဏေရာ ကုတော ဥပဇ္ဈံ ဂဏှန္တိ။  ။ သာမဏေရာ ဥပဇ္ဈာယမှာ ဥပဇ္ဈံ ဂဏှန္တိ။
-- **၄။** တိတ္ထိယာ ကုတော ပရာဇေန္တိ။  ။ တိတ္ထိယာ ဗုဒ္ဓသ္မာ ပရာဇေန္တိ။
-- **၅။** မဟာနဒိယော ကုတော ပဘဝန္တိ။  ။ မဟာနဒိယော ဟိမဝတာ ပဘဝန္တိ။
-- **၆။** တွံ ကုတော ဝိရမသိ။  ။ အဟံ ပါဏာတိပါတာ ဝိရမာမိ။
-- **၇။** ဂါမော နဂရတော ကီဝဒူရော။  ။ ဂါမော နဂရတော ယောဇနံ ဒူရော။
-- **၈။** အာသန္နောနု အာဝုသော ဂါမော နဂရတော။  ။ န အာသန္နော ဘန္တေ နဂရတော ဂါမော၊ ဂါဝုတံ ဒူရော။
+- **၁။** kaññāyo keti uttasanti။  ။ kaññāyo bālehi uttasanti။
+- **၂။** sissā kuto sippaṃ uggaṇanti။  ။ sissā ācariyato sippaṃ uggaṇhanti။
+- **၃။** sāmāṇerā kuto upajjhaṃ gaṇhanti။  ။ sāmaṇerā upajjhāyamhā upajjhaṃ gaṇhanti။
+- **၄။** titthiyā kuto parājenti။  ။ titthiyā buddhasmā parājenti။
+- **၅။** mahānadiyo kuto pabhavanti။  ။ mahānadiyo himavatā pabhavanti။
+- **၆။** thaṃ kuto viramasi။  ။ ahaṃ pāṇātipātā viramāmi။
+- **၇။** gāmo nagarato kīvadūro။  ။ gāmo nagarato yojanaṃ dūro။
+- **၈။** āsannonu āvuso gāmo nagarato။  ။ na āsanno bhante nagarato gāmo၊ gāvutaṃ dūro။
 
 **<center>ကြည့်ရှုရန်</center>**
->ဥတ္တသ-ထိတ်(လန့်)။ ။ဂဏှ-ယူ။ ။ဥဂ္ဂဏှ-သင်ယူ။ ။ပရာဇေ-ရှုံး။ ။ပဘဝ-စ၍ဖြစ်။ ။ဝိရမ-ရှောင်ကြဉ်။ ။ကီဝဒူ‌ရော-ဘယ်လောက်ဝေးသနည်း။ ။တိတ္ထိယော-တိတ္ထိ(အယူမှားသူ)။  ။ဒူရော-ဝေး၏။ ။အာသ‌န္နော-နီး၏။ ။ဥပဇ္ဈာယော(ဥပဇ္ဈာ)-ကပဇ္ဈာယ်။ ။ဂါဝုတံ-တစ်ဂါဝုတ်။ ။ယောဇနံ-တစ်ယူဇနာ။
+>uttasa-ထိတ်(လန့်)惊恐။ ။gaṇha-ယူ拿။ ။uggaṇha-သင်ယူ学။ ။parāje-ရှုံး输။ ။pabhava-စ၍ဖြစ်开始။ ။virama-ရှောင်ကြဉ်远离။ ။ကီဝဒူ‌ရော-ဘယ်လောက်ဝေးသနည်း多远။ ။titthiyo-တိတ္ထိ(အယူမှားသူ)异教徒။  ။dūro-ဝေး၏远။ ။āsa‌nno-နီး၏近။ ။upajjhāyo(upajjhā)-ဥပဇ္ဈာယ်教师။ ။gāvutaṃ-တစ်ဂါဝုတ်牛呼1/4由旬။ ။yojanaṃ-တစ်ယူဇနာ一由旬။
 
 **<center>ပါဠိစီရန်g</center>**
-- (**က**) သင်သည် ဘယ်မှ လာသနည်း။[ဘယ်က ဘာသလဲ]
-- (**ခ**) ကျွန်ုပ်သည်  မြို့မှ လာပါ၏။[မြို့က လာပါတယ်။] 
-- (**ဂ**) ငါတို့သည် အိမ်မှ ထွက်ကုန်၏။[အိမ်က ထွက်ကြတယ်] 
-- (**ဃ**) ကလေးသည် အိမ်မှ ကျ၏။[အိမ်ပေါ်က ကျတယ်။] 
-- (**င**) လူလိမ္မာတို့သည် မကောင်းမှုမှ ကြောက်ကုန်၏။ 
-- (**စ**) လူမိုက်တို့သည် မကြောင်းမှုမှ ပလန့်ကုန်။ 
-- (**ဆ**) သင်သည် အဘယ်သူမှ အတတ်ကို သင်ဘူသနည်း။[သယ်သူ့ဆီက အတတ် သင်သလဲ။] 
-- (**ဇ**) ကျွန်ုပ်သည် ဆရာ့ဆီက အတတ်ကို သင်ယူပါတယ်။ 
-- (**ဈ**) ကိုရင်သည် ဥပဇ္ဈာယ်အထံမှ ဥပဇ္ဈယ်ကို ယူ၏။ 
-- (**ည**) ရွာသည်  ဘယ်က စ၍ဖြစ်သနည်း။ 
-- (**ဋ**) မြို့သည် ရွာမှ ဘယ်လောက်ဝေးသနည်း။ 
-- (**ဌ**) ရွာသည် မြို့မှ နီးသလေား။[မြို့နဲ့ နီးသလား။]
+- (**က**) သင်သည် ဘယ်မှ လာသနည်း။[ဘယ်က လာသလဲ]你从哪来。
+- (**ခ**) ကျွန်ုပ်သည်  မြို့မှ လာပါ၏။[မြို့က လာပါတယ်။] 我从城市里来。
+- (**ဂ**) ငါတို့သည် အိမ်မှ ထွက်ကုန်၏။[အိမ်က ထွက်ကြတယ်] 我们从家里出去。
+- (**ဃ**) ကလေးသည် အိမ်မှ ကျ၏။[အိမ်ပေါ်က ကျတယ်။] 小孩从家里掉下来。
+- (**င**) လူလိမ္မာတို့သည် မကောင်းမှုမှ ကြောက်ကုန်၏။ 听话的人怕不善业。
+- (**စ**) လူမိုက်တို့သည် မကြောင်းမှုမှ မလန့်ကုန်။ 坏人不怕不善业。
+- (**ဆ**) သင်သည် အဘယ်သူမှ အတတ်ကို သင်ယူသနည်း။[သယ်သူ့ဆီက အတတ် သင်သလဲ။] 你从谁那学的知识。
+- (**ဇ**) ကျွန်ုပ်သည် ဆရာ့ဆီက အတတ်ကို သင်ယူပါတယ်။ 我从老师那学的知识。
+- (**ဈ**) ကိုရင်သည် ဥပဇ္ဈာယ်အထံမှ ဥပဇ္ဈယ်ကို ယူ၏။ 沙马内拉在亲教师那受戒。
+- (**ည**) ရွာသည်  ဘယ်က စ၍ဖြစ်သနည်း။ 村子从哪开始有的
+- (**ဋ**) မြို့သည် ရွာမှ ဘယ်လောက်ဝေးသနည်း။ 城市离村子有多远。
+- (**ဌ**) ရွာသည် မြို့မှ နီးသလေား။[မြို့နဲ့ နီးသလား။]村子离城市近吗？
 
->**အမှာ။** စတုတ္ထိဝိဘတ်နှင့် ဤ ပဉ္စမီဝိဘတ်အခန်း၌ ကျက်ဖီု့ရာ ပါဠိအတော်များ၏၊ ထို့ကြောင့် ပါဠိကို (၂ရက်စီ) အနက်ပေးမြန်မာပြန်စေ၍ ပါဠိပုံစံကို တစ်ရက်သက်သက် စီပါစေ။<br>
-**ဆရာတို့သည်** ပြီးခဲ့သော ပါဠိများကို ‌မမေ့ဖို့ရန် အပိုပါဠိစီဖို့ရာ မြန်မာလို ပြောပေးကြပါ။
+>**အမှာ။** စတုတ္ထိဝိဘတ်နှင့် ဤ ပဉ္စမီဝိဘတ်အခန်း၌ ကျက်ဖို့ရာ ပါဠိအတော်များ၏၊ ထို့ကြောင့် ပါဠိကို (၂ရက်စီ) အနက်ပေးမြန်မာပြန်စေ၍ ပါဠိပုံစံကို တစ်ရက်သက်သက် စီပါစေ။<br>
+**ဆရာတို့သည်** ပြီးခဲ့သော完了 ပါဠိများကို ‌မမေ့ဖို့ရန် အပိုပါဠိစီဖို့ရာ မြန်မာလို ပြောပေးကြပါ။
