--- a/pathama/8.chatthi_vibhatti.md
+++ b/pathama/8.chatthi_vibhatti.md
@@ -2,19 +2,19 @@
 
 |  |  |
 | - | - |
-|**၁။** ဣဒံ ကဿ သန္တကံ။| **၂။** ဣဒံ မမ သန္တကံ။|
-|**၃။** ဣဒံ ကဿ ဝတ္ထံ။| **၄။** ဣဒံ မမ သန္တကံ။ |
-|**၅။** ဣဒံ ကဿ ဂေဟံ။| **၆။** ဣဒံ မမ ဂေဟံ။|
-|**၇။** အယံ ကဿ ပတ္တော။| **၈။** အယံမေ ပတ္တော။|
-|**၉။** ဣဒံ ကဿ စီဝရံ။ |**၁၀။** ဣဒံ မေ စီဝရံ။ |
-|**၁၁။** ဣဒံ နု တေ သန္တကံ ။|**၁၂။** နယိဒံ မမ သန္တကံ **,**  မောင်ဌေးဒါရကဿ သန္တကံ။
+|**၁။** idaṃ kassa santakaṃ။| **၂။** idaṃ mama santakaṃ။|
+|**၃။** idaṃ kassa vatthaṃ။| **၄။** idaṃ mama santakaṃ။ |
+|**၅။** idaṃ kassa gehaṃ။| **၆။** idaṃ mama gehaṃ။|
+|**၇။** ayaṃ kassa patto။| **၈။** ayaṃ me patto။|
+|**၉။** idaṃ kassa cīvaraṃ။ |**၁၀။** idaṃ me cīvaraṃ။ |
+|**၁၁။** idaṃ nu te santakaṃ ။|**၁၂။** nayidaṃ mama santakaṃ **,**  大哥dārakassa santakaṃ။
 
 **<center>ပါဠီစီရန်</center>**
-- (**က**) ဤဟာသည် ငါ၏ ဥစ္စာမဟုတ်။ 
-- (**ခ**) ဤဟာတွေ သင်၏ ဥစ္စာများ မဟုတ်ကြ။
-- (**ဂ**) သပိတ်သည် ငါ၏ ဥစ္စာ မဟုတ်ပါ။
+- (**က**) ဤဟာသည် ငါ၏ ဥစ္စာမဟုတ်။ 这是我的物品
+- (**ခ**) ဤဟာတွေ သင်၏ ဥစ္စာများ မဟုတ်ကြ။这不是你的物品
+- (**ဂ**) သပိတ်သည် ငါ၏ ဥစ္စာ မဟုတ်ပါ။钵不是我的物品。
 
 **<center>ကြည်ရှုရန်</center>**
->ဣဒံ-ဤဟာ, ဤဝတ္ထု [စသည်ဖြင့် နပုလ္လိန်ဆိုင်ရာ၌ ဘာမဆို သုံးစွဲပါ။] ဣမာနိ-ဤဟာတို့ ,ဤဝါတ္ထုတို့ , ဤဟာတွေ။
-အယံ-ဤသူ။ [“ဤယောကျ်ာ, ဤမိန်းမ” စသည်။]
-ဣမာယော-ဤမိန်းမတို့သည်။  ။ဣမေ-ဤယောကျ်ားတို့သည်။ တေ, တဝ,တုယှံ-သင်၏။ ။မေ,မမ,မယှံ-ငါ၏။ ။သန္တကံ-ဥစ္စာ။ ။ပတ္တော-သပိတ်။ ။စီဝရံ-သင်္ကန်း။ ။ဝတ္ထိ-အဝတ်(အထည်)။ ။နယိဒံ = န + ဣဒံ
+>idaṃ-ဤဟာ, ဤဝတ္ထု这个 [စသည်ဖြင့် နပုလ္လိန်ဆိုင်ရာ၌ ဘာမဆို သုံးစွဲပါ။] imāni-ဤဟာတို့ ,ဤဝါတ္ထုတို့ , ဤဟာတွေ这些။
+ayaṃ-ဤသူ။这 [“ဤယောကျ်ာ这男人, ဤမိန်းမ这女人” စသည်等等။]
+imāyo-ဤမိန်းမတို့သည်这女人们။  ။ime-ဤယောကျ်ားတို့သည်这男人们။ te, tava,tuyhaṃ-သင်၏你的။ ။me,mama,mayhaṃ-ငါ၏我的။ ။santakaṃ-ဥစ္စာ物品။ ။patto-သပိတ်钵။ ။cīvaraṃ-သင်္ကန်း袈裟။ ။vatthi-အဝတ်(အထည်)衣服။ ။ nayidaṃ = na + idaṃ
