--- a/pathama/9.catutthi_chatthitve.md
+++ b/pathama/9.catutthi_chatthitve.md
@@ -1,20 +1,20 @@
-## <center>**၏+ငှာ-ဟု ပေးရသော ဆဋ္ဌီနှင့်စတုတ္ထိဝိဘတ်တွဲ**</center>
+## <center>**၏+ငှာ-ဟု ပေးရသော ဆဋ္ဌီနှင့်စတုတ္ထီဝိဘတ်တွဲ**</center>
 
-- **၁။** ဗုဒ္ဓေါ ကေသံ အတ္ထာယ ဥပ္ပဇ္ဇတိ။ 
-- **၂။** ဗုဒ္ဓေါ အတ္ထာနံ အတ္ထာယ ဥပ္ပဇ္ဇတိ။
-- **၃။** ဗုဒ္ဓေါ ကေသံဟိတာယ သုခါယ ဥပ္ပဇ္ဇတိ။ 
-- **၄။** ဗုဒ္ဓေါ ဒေဝမနုဿာနံ ဟိတာယ သုခါယ ဥပ္ပဇ္ဇတိ။ 
-- **၅။** တွံ ကိမတ္ထာယ ဂါမံ ဂစ္ဆသိ။ 
-- **၆။** အဟံ ပိဏ္ဍာယ ဂါမံ ဂစ္ဆာမိ။ 
-- **၇။** ဣဒံ ကေဒံ သတ္တံ။ 
-- **၈။** ဣဒံ အာဂန္တုကာနံ သတ္တံ။
+- **၁။** buddho kesaṃ atthāya uppajjati။ 
+- **၂။** buddho satthānaṃ atthāya uppajjati။
+- **၃။** buddho kesaṃ hitāya sukhāya uppajjati။ 
+- **၄။** buddho devamanussānaṃ hitāya sukhāya uppajjati။ 
+- **၅။** thaṃ kimatthāya gāmaṃ gacchasi။ 
+- **၆။** ahaṃ piṇḍāya gāmaṃ gacchāmi။ 
+- **၇။** idaṃ kedaṃ bhattaṃ။ 
+- **၈။** idaṃ āgantukānaṃ sattaṃ။
 ---
-- (**က**) သင်ငည် ငါ၏ အကျိုးငှာ လာ၏။ [ငါ့အတွက် လာ၏။]
-- (**ခ**) ပါသည် သင်၏ အကျိုးငှာ (သင်ဖို့) ထမင်း ချက်၏။ 
-- (**ဂ**) ဒီဟာဘယ်သူ့ဖို့ ကျောင်းလဲ။ 
-- (**ဃ**) ဒီဟာ ငါ့ဖို့ ကျောင်း။
+- (**က**) သင်သည် ငါ၏ အကျိုးငှာ လာ၏။ [ငါ့အတွက် လာ၏။]你为了我来。
+- (**ခ**) ငါသည် သင်၏ အကျိုးငှာ (သင်ဖို့) ထမင်း ချက်၏။ 我为了你煮饭。
+- (**ဂ**) ဒီဟာဘယ်သူ့ဖို့ ကျောင်းလဲ။ 这是为谁准备的住处
+- (**ဃ**) ဒီဟာ ငါ့ဖို့ ကျောင်း။这是为我准备的住处
 
 **<center>ကြည့်ရှုရန်</center>**
->အတ္ထာယ-အကျိုးငှာ၊ ဟိတာယစီးပွားအလို့ငှာ၊ သုခါယ-ချမ်းသာခြင်းငှာ၊ ဥပ္ပဇ္ဇ-ဖြစ်တော်မူ (ပွင့်တောမူ)၊ ကိမတ္ထာယ-အဘယ် အကျိုးငှာ၊ ပိဏ္ဍယ-ဆွမ်းအလို့ငှာ။
+>atthāya-အကျိုးငှာ为了၊ hitāya-စီးပွားအလို့ငှာ为了利益၊ sukhāya-ချမ်းသာခြင်းငှာ威力富有၊ uppajja-ဖြစ်တော်မူ (ပွင့်တောမူ)成၊ kimatthāya-အဘယ် အကျိုးငှာ为了什么၊ piṇḍaya-ဆွမ်းအလို့ငှာ为了饭။
 
->ကေသံ-ဘယ်သူတို့ဖို့ (ဘယ်သူတို့၏ အကျိုးငှာ၊) အာဂန္တုကာနံ-ဧည်သည်တို့ဖို့ (ဧည့်သည်တို့၏ အကျိုးငှာ )။ [“အကျိုးငှာ, အလို့ငှာ” ဟူသော စကားသည်”အထွက်, ဖို့” ဟူသောစကားနှင့်အဓိပ္ပါယ် တူ၏။]
+>kesaṃ-ဘယ်သူတို့ဖို့ 为谁(ဘယ်သူတို့၏ အကျိုးငှာ၊) āgantukānaṃ-ဧည်သည်တို့ဖို့ 为了客人(ဧည့်သည်တို့၏ အကျိုးငှာ )။ [“အကျိုးငှာ, အလို့ငှာ” ဟူသော စကားသည်”အထွက်, ဖို့” ဟူသောစကားနှင့်အဓိပ္ပါယ် တူ၏။]
